# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__pypi_name }}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.md.license  VERSION  pyproject.toml  requirements-dev.txt
{{ cookiecutter.__pypi_name }}/.github/: dependabot.yml
{{ cookiecutter.__pypi_name }}/docs/: conf.py  requirements.txt
{{ cookiecutter.__pypi_name }}/{{ cookiecutter.__import_name }}/: __init__.py
